golden/error/typecheck_multi_statement_return.test
-- @begin create_user(name: str) ->1 User
insert into
  audit_events (created_at, type)
values
  (now(), 'create_user')
returning
  -- Not allowed! Only the final statement can return a value.
  event_id /* :i64 */;

insert into
  users (name)
values
  (:name)
returning
  user_id /* :i64 */;

-- @end


 --> stdin:8:2
  |
8 |   event_id /* :i64 */;
  |   ^~~~~~~~
Error: Query outputs can only be used in the final statement of the query.
